--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
 <!-- setup your HTML document here -->
+<!DOCTYPE html>
+<html>
+  <head>
+      <title> My LinkedIn Clone</title>
+      <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <div id="container">
+      <div id="div-nav" class="w100">
+        <p>nav menu</p>
+      </div>
+      <div id="div-main" class="w100">
+        <div id="main-left">
+          <div id="profile-summary" class= "main-boxes">
+            <div id="div-profile-splash-image">
+              <img id="img-splash" src="https://images.unsplash.com/photo-1422493757035-1e5e03968f95?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80" alt="splash image">
+            </div>
+            <div id="div-profile-image">
+              <img id="img-profile" src="https://d37jsm3yxo26ez.cloudfront.net/public/user/f2/bb/18/188b4f_d65f278.jpeg?c=4cc5">
+            </div>
+            <div id="profile-bio">
+              <h3>Ashwin Srinivasan</h3>
+              <p id="bio-summary">Code Platoon TA</p>
+            </div>
+          </div>
+          <div id="profile-about" class= "main-boxes">
+            About me
+          </div>
+          <div id="profile-articles" class= "main-boxes">
+            Articles I've Written
+          </div>
+        </div>
+        <div id="main-right">
+          Right Menu
+        </div>
+      </div>
+    </div>
+  </body>
+
+</html>
